# delivery_service_django

./: .env.example  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
config/: celery.py  settings.py  urls.py
parcels/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
parcels/migrations/: 0001_initial.py  0002_parcel_declared_value_usd.py  0003_rename_delivery_price_usd_parcel_delivery_price.py  0004_alter_parcel_weight_kg.py  0005_alter_parcel_options.py
parcels/tests/: test_models.py  test_serializers.py  test_views.py
